# intro2ml-helmet-violation-detection

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  bot_collect_video_links.py  config.py  convert_to_yolo.py  crawler.py  docker-compose.yml  download_videos.py  enhance-dataset  extract_frames.py  filter_frames.py  helmet_crawler.ipynb  main.py  prepare_dataset_for_annotation.py  pseudo_label_with_grounding_dino.py  pyproject.toml  report_results.py  run_pipeline.py  show_config.py  video_scraping.ipynb
.github/workflows/: deploy-gke.yml  deploy.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
backend/: .dockerignore  Dockerfile.api  Dockerfile.worker  README.md  pyproject.toml  seed_users.py  supabase_schema.sql
backend/api-gateway/: traefik.yml
backend/app/: __init__.py  auth.py  celery_app.py  config.py  main.py  supabase_client.py  tasks.py  violation_logic.py
backend/app/db/: __init__.py  client.py  profiles.py  storage.py  videos.py  violations.py
backend/app/models/: __init__.py  base.py  fasterrcnn_wrapper.py  registry.py  rtdetr_wrapper.py  yolo_wrapper.py
backend/app/routes/: camera.py  videos.py  violations.py
backend/auth/: Dockerfile  pyproject.toml
backend/auth/src/: grpc_server.py  main.py
backend/auth/src/db/: __init__.py  profiles.py
backend/common/: pyproject.toml
backend/common/common/: auth.py  celery.py  config.py  security.py
backend/common/common/db/: __init__.py  client.py  constants.py  records.py  storage.py  videos.py  violations.py
backend/common/common/grpc/: __init__.py  auth_pb2.py  auth_pb2_grpc.py
backend/common/tests/: test_auth.py  test_storage.py
backend/dashboard/: Dockerfile  pyproject.toml
backend/dashboard/src/: main.py  middleware.py  queries.py
backend/dashboard/tests/: test_dashboard_queries.py  test_dashboard_rls.py
backend/docs/: inference_contract.md  model_outputs.md
backend/inference/: Dockerfile  pyproject.toml
backend/inference/src/: stream.py  tracker.py  violation_logic.py  worker.py
backend/inference/src/heuristics/: crop.py  motion.py
backend/inference/src/models/: __init__.py  base.py  fasterrcnn_wrapper.py  postprocess.py  preprocess.py  registry.py  rtdetr_wrapper.py  wrapper.py  yolo_wrapper.py
backend/inference/tests/: test_inference_models.py  test_inference_pipeline.py  test_stream.py  test_tracker.py  test_violation_logic.py
backend/inference/weights/: README.md
backend/ingestion/: Dockerfile  pyproject.toml
backend/ingestion/src/: main.py  websocket.py
backend/ingestion/tests/: test_ingestion_upload.py  test_ingestion_websocket.py
backend/notification/: Dockerfile  pyproject.toml
backend/notification/src/: i18n.py  main.py
backend/notification/tests/: test_notification_websocket.py
backend/orchestration/: Dockerfile  pyproject.toml
backend/orchestration/src/: lifecycle.py  retention.py
backend/orchestration/tests/: test_orchestration_retention.py
backend/supabase/: README.md
backend/supabase/schema/: 01_profiles.sql  02_videos.sql  03_violations.sql  04_indexes.sql  05_realtime.sql
crawl/: README.md
crawl/notebooks/: auto_labeling.ipynb  video_scraping.ipynb
crawl/scripts/: build_unified_coco_dataset.py  merge_cvat_coco_back.py  prepare_cvat_coco_task.py
data/: README.md
deploy/scripts/: smoke-test.sh
docs/: README.md  SETUP.md  bug.md  camera_websocket_flow.md  devops-smoke-test.md  link.md  member1-infra-devops-test-report.md  supabase-setup.md  task.md
docs/deployment/: GCP Deployment Setup.md  artifact-registry.md  budget-alerts.md  cost-and-scale-review.md  environment-inventory.md  github-actions-secrets.md  google-cloud.md  prerequisites.md  public-endpoint.md  release-state.md  (+2 more)
eda_figures/: README.md
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  proxy.ts  types-papaparse.d.ts
k8s/: README.md  api.yaml  frontend.yaml  kustomization.yaml  namespace.yaml  redis.yaml  secrets.example.yaml  worker.yaml
model-report/: hcmus-report-template.sty  main.tex
models/: PLAN.md  data_pipeline.ipynb  dataset.py  faster-rcnn.ipynb  metrics.py  plots.py  pyproject.toml  raytune.py  rtdetr.ipynb  train_fasterrcnn.py  train_rtdetr.py  train_yolo.py  utils.py  yolo.ipynb
report/: hcmus-report-template.sty  library.sty  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lot  main.tex  main.toc  requirements.md
rtdetr_result/: args.yaml  best_config.json  dataset.yaml  results.csv  rtdetr_final_results.json
scripts/: create_source_submission.py  resize_dataset.py
slide/: README.md  compile_out.txt  main.tex  requirements.md  script_thuyet_trinh_mo_hinh.md
supabase/: README.md
(+203 files in other folders)
