[project]
name = "venv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pillow>=11.3.0",
    "playwright>=1.58.0",
    "torch>=2.8.0",
    "transformers>=4.56.0",
    "yt-dlp>=2026.3.17",
]
