[project]
name = "helmet-violation-backend"
version = "0.1.0"
description = "FastAPI, Celery, and ONNX Runtime backend for helmet violation detection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.0",
    "fastapi>=0.137.1",
    "onnxruntime>=1.23.2",
    "opencv-python-headless>=4.12.0.88",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "supabase>=2.25.0",
    "uvicorn[standard]>=0.38.0",
]
