[project]
name = "common"
version = "0.1.0"
description = "Shared modules for helmet violation detection microservices"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.12.0",
    "supabase>=2.25.0",
    "redis>=7.1.0",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.12.0.88",
    "python-jose[cryptography]>=3.5.0",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]

[tool.pytest.ini_options]
pythonpath = ["."]
