[project]
name = "ingestion"
version = "0.1.0"
description = "Ingestion microservice"
requires-python = ">=3.13"
dependencies = [
    "common",
    "fastapi>=0.137.1",
    "pydantic-settings>=2.12.0",
    "supabase>=2.25.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "celery>=5.6.0",
    "opencv-python-headless>=4.12.0.88",
    "numpy>=2.4.6",
    "uvicorn[standard]>=0.38.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
