[project]
name = "notification"
version = "0.1.0"
description = "Notification microservice"
requires-python = ">=3.13"
dependencies = [
    "common",
    "fastapi>=0.137.1",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "supabase>=2.25.0",
    "uvicorn[standard]>=0.38.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
