[project]
name = "orchestration"
version = "0.1.0"
description = "Orchestration microservice"
requires-python = ">=3.13"
dependencies = [
    "common",
    "celery>=5.6.0",
    "redis>=7.1.0",
    "supabase>=2.25.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
